Perform audio file operations in the background.

--- a/Pree/Pree.csproj
+++ b/Pree/Pree.csproj
@@ -168,6 +168,7 @@
     <Compile Include="Models\RecordingSession.cs" />
     <Compile Include="Models\RecordingSettings.cs" />
     <Compile Include="Models\Timer.cs" />
+    <Compile Include="Services\AudioFileService.cs" />
     <Compile Include="Streams\TruncatingFilter.cs" />
     <Compile Include="ViewModels\DeviceViewModel.cs" />
     <Compile Include="ViewModels\IContentViewModel.cs" />
