--- a/Pree.Tests/packages.config
+++ b/Pree.Tests/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="FluentAssertions" version="3.3.0" targetFramework="net451" />
+  <package id="FluentAssertions" version="5.2.0" targetFramework="net471" />
+  <package id="System.ValueTuple" version="4.4.0" targetFramework="net471" />
 </packages>
