--- a/Pree/packages.config
+++ b/Pree/packages.config
@@ -1,7 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.0" targetFramework="net48" />
   <package id="NAudio" version="1.8.4" targetFramework="net471" />
+  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net48" />
   <package id="NHotkey" version="1.2.1" targetFramework="net471" />
   <package id="NHotkey.Wpf" version="1.2.1" targetFramework="net471" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
+  <package id="System.Memory" version="4.5.4" targetFramework="net48" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.1" targetFramework="net48" />
+  <package id="System.Text.Encodings.Web" version="4.7.1" targetFramework="net48" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net48" />
   <package id="UpdateControls" version="2.3.3" targetFramework="net471" />
 </packages>
