--- a/Pree/packages.config
+++ b/Pree/packages.config
@@ -6,6 +6,7 @@
   <package id="NHotkey" version="1.2.1" targetFramework="net471" />
   <package id="NHotkey.Wpf" version="1.2.1" targetFramework="net471" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
+  <package id="System.Collections.Immutable" version="1.7.1" targetFramework="net48" />
   <package id="System.Memory" version="4.5.4" targetFramework="net48" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.1" targetFramework="net48" />
