Separated segments into two classes

--- a/Pree/Pree.csproj
+++ b/Pree/Pree.csproj
@@ -209,9 +209,10 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Assets\Placeholder.cs" />
+    <Compile Include="Camtasia\ContinuousSegment.cs" />
     <Compile Include="Camtasia\Scene.cs" />
     <Compile Include="Camtasia\TscProject.cs" />
-    <Compile Include="Camtasia\Segment.cs" />
+    <Compile Include="Camtasia\CamSegment.cs" />
     <Compile Include="Camtasia\Source.cs" />
     <Compile Include="Camtasia\TimeLog.cs" />
     <Compile Include="Converters\ViewSelector.cs" />
